<package>
  <name>gps_imu</name>
  <version>1.0.0</version>
  <description>

      gps_imu 

  </description>

  <maintainer email="lukeludlow@live.com">luke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>


