<?xml version="1.0"?>
<package>
  <name>gps_imu</name>
  <version>1.0.0</version>
  <description>gps and imu stuff</description>
  <author>luke</author>
  <maintainer email="lukeludlow@live.com">luke</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <url></url>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <metapackage />
  </export>
</package>
